--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -8,19 +8,25 @@ environment:
 
 dependencies:
   bloc: ^8.1.3
+  equatable: ^2.0.5
   flutter:
     sdk: flutter
   flutter_bloc: ^8.1.4
   flutter_localizations:
     sdk: flutter
   intl: ^0.18.1
+  json_annotation: ^4.9.0
 
 dev_dependencies:
   bloc_test: ^9.1.6
+  build_runner: ^2.4.9
   flutter_test:
     sdk: flutter
+  json_serializable: ^6.8.0
   mocktail: ^1.0.3
-  very_good_analysis: ^5.1.0
+  flutter_lints: ^3.0.0
+
+
 
 flutter:
   uses-material-design: true
