--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,13 +19,14 @@ dependencies:
   json_annotation: ^4.9.0
 
 dev_dependencies:
-  bloc_test: ^9.1.6
+  bloc_test: ^9.1.7
   build_runner: ^2.4.9
   flutter_test:
     sdk: flutter
   json_serializable: ^6.8.0
   mocktail: ^1.0.3
   flutter_lints: ^3.0.0
+  test: ^1.24.9
 
 
 
