--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -8,6 +8,7 @@ environment:
 
 dependencies:
   bloc: ^8.1.3
+  bloc_concurrency: ^0.2.5
   dio: ^5.4.3+1
   equatable: ^2.0.5
   flutter:
@@ -17,6 +18,7 @@ dependencies:
     sdk: flutter
   intl: ^0.18.1
   json_annotation: ^4.9.0
+  stream_transform: ^2.1.0
 
 dev_dependencies:
   bloc_test: ^9.1.7
