--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,6 +9,7 @@ environment:
 dependencies:
   bloc: ^8.1.3
   bloc_concurrency: ^0.2.5
+  cached_network_image: ^3.3.1
   dio: ^5.4.3+1
   equatable: ^2.0.5
   flutter:
@@ -19,6 +20,7 @@ dependencies:
   intl: ^0.18.1
   json_annotation: ^4.9.0
   stream_transform: ^2.1.0
+  webview_flutter: ^4.8.0
 
 dev_dependencies:
   bloc_test: ^9.1.7
