--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,6 +17,8 @@ dependencies:
   flutter_bloc: ^8.1.4
   flutter_localizations:
     sdk: flutter
+  hive: ^2.2.3
+  hive_flutter: ^1.1.0
   intl: ^0.18.1
   json_annotation: ^4.9.0
   stream_transform: ^2.1.0
@@ -31,6 +33,7 @@ dev_dependencies:
   mocktail: ^1.0.3
   flutter_lints: ^3.0.0
   test: ^1.24.9
+  hive_generator: ^2.0.1
 
 
 
