--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,6 +10,7 @@ dependencies:
   bloc: ^8.1.3
   bloc_concurrency: ^0.2.5
   cached_network_image: ^3.3.1
+  connectivity_plus: ^6.0.3
   dio: ^5.4.3+1
   equatable: ^2.0.5
   flutter:
