--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -35,6 +35,10 @@ jobs:
         #4 Install Dependencies
       - name: Install Dependencies
         run: flutter pub get
+        
+        #5 run unit test
+      - name: run unit test
+        run: flutter test 
 
         #5 Setup Keystore
       # - name: Decode Keystore
@@ -48,10 +52,10 @@ jobs:
       #     echo "keyAlias=${{ secrets.KEY_ALIAS }}" >> android/key.properties
       #     echo "storeFile=keystore.jks" >> android/key.properties
         
-       #6 Building APK
-      - name: Build APK
-        # run: flutter build apk --release
-        run: flutter build apk --flavor development --target lib/main_development.dart
+      #  #6 Building APK
+      # - name: Build APK
+      #   # run: flutter build apk --release
+      #   run: flutter build apk --flavor development --target lib/main_development.dart --release
 
         #7 Building App Bundle (aab)
       # - name: Build appBundle
@@ -67,14 +71,14 @@ jobs:
       #     tar -czf ios_build.tar.gz ios
 
         #9 Upload Artifacts
-      - name: Upload Artifacts
-        uses: actions/upload-artifact@v2
-        with:
-          name: Releases
-          path: |
-            build/app/outputs/flutter-apk/app-release.apk
-            build/app/outputs/bundle/release/app-release.aab
-            build/ios_build.tar.gz
+      # - name: Upload Artifacts
+      #   uses: actions/upload-artifact@v2
+      #   with:
+      #     name: Releases
+      #     path: |
+      #       build/app/outputs/flutter-apk/app-release.apk
+      #       build/app/outputs/bundle/release/app-release.aab
+      #       build/ios_build.tar.gz
 
       #   #10 Extract Version
       # - name: Extract version from pubspec.yaml
