--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -35,8 +35,19 @@ jobs:
         #4 Install Dependencies
       - name: Install Dependencies
         run: flutter pub get
-        
-        #5 run unit test
+      
+        #5 Verifies if the dart code is formatted well
+      - name: Verify formatting
+        run: dart format --output=none --set-exit-if-changed .
+        # --set-exit-if-changed stops execution if the any code is not well formatted
+        # --output=none prints files which needs to be formatted
+      
+        #5 Checks for Symantic errors. Can be configured using analysis_options.yaml
+      - name: Analyze project source
+        run: flutter analyze
+        # optionally use --fatal-warnings to stop execution if any warnings are found
+
+        #6 run unit test
       - name: run unit test
         run: flutter test 
 
