--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -2,7 +2,7 @@ name: CI
 on:
   pull_request:
     branches:
-      - master
+      - main
   push:
     branches:
       - main
@@ -15,6 +15,7 @@ jobs:
       - uses: actions/checkout@v4.1.7
       - uses: actions/setup-java@v4.2.2
         with:
+          distribution: 'oracle'
           java-version: "17.x"
       - uses: subosito/flutter-action@v2.16.0
         with:
@@ -31,6 +32,7 @@ jobs:
       - uses: actions/checkout@v4.1.7
       - uses: actions/setup-java@v4.2.2
         with:
+          distribution: 'oracle'
           java-version: "17.x"
       - uses: subosito/flutter-action@v2.16.0
         with:
@@ -47,6 +49,7 @@ jobs:
       - uses: actions/checkout@v4.1.7
       - uses: actions/setup-java@v4.2.2
         with:
+          distribution: 'oracle'
           java-version: "17.x"
       - uses: subosito/flutter-action@v2.16.0
         with:
