--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -16,7 +16,7 @@ jobs:
       - uses: actions/setup-java@v3.12.0
         with:
           distribution: 'oracle'
-          java-version: "17.x"
+          java-version: "17"
       - uses: subosito/flutter-action@v2.16.0
         with:
           channel: "stable"
@@ -33,7 +33,7 @@ jobs:
       - uses: actions/setup-java@v3.12.0
         with:
           distribution: 'oracle'
-          java-version: "17.x"
+          java-version: "17"
       - uses: subosito/flutter-action@v2.16.0
         with:
           channel: "stable"
@@ -50,7 +50,7 @@ jobs:
       - uses: actions/setup-java@v3.12.0
         with:
           distribution: 'oracle'
-          java-version: "17.x"
+          java-version: "17"
       - uses: subosito/flutter-action@v2.16.0
         with:
           channel: "stable"
